# jansvbkernel

./: README.md  pyproject.toml
example/: example.ipynb
jansvbkernel/: kernel.json
src/jansvbkernel/: __init__.py  __main__.py  install_kernelspec.py  kernel.py
